--- a/localisation/shared_borders_l_braz_por.yml
+++ b/localisation/shared_borders_l_braz_por.yml
@@ -1,11 +1,12 @@
-﻿l_english:
+﻿# l_english:
 # l_spanish:
 # l_german:
 # l_french:
 # l_polish:
 # l_russian:
-# l_braz_por:
+l_braz_por:
 # l_simp_chinese:
+
 
 # No Borders
 no_shared_borders:1 "$TRIGGER_FAIL$We have no §Yshared borders§!."
